various build script cleanups